# advent-of-code-2021

./: .gitignore  README.md  puzzles.md
lang-wheel/: lang-calendar.txt  lang_wheel.pl
solutions/haskell/: advent-of-code2021.cabal  aoc2021haskell.cabal  hie.yaml
solutions/haskell/app/: Day01.hs
solutions/python/: day03.py  day06.py
solutions/ruby/: Gemfile  day05.rb
solutions/rust/: Cargo.toml
solutions/scala/: .sbtopts  build.sbt
solutions/scala/src/main/scala/: Day04.scala  Day07.scala
