cabal-version:      3.0
name:               advent-of-code2021
version:            0.1.0.0
synopsis:           Disjointed Haskell solutions for Advent of Code 2021
description:        Released on an unsuspecting world.
homepage:           https://github.com/victor-gp/advent-of-code-2021
license:            MIT
author:             Víctor González Prieto
maintainer:         victor.gp.dev@gmail.com

executable day01
    main-is:          Day01.hs
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
